# monet

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  accounts.toml.example  opencode.json  pyproject.toml
.scratch/expense-tracker-v1/: PRD.md
.scratch/expense-tracker-v1/issues/: 01-tracer-skeleton.md  02-folder-watcher-json-ingest.md  03-pdf-extraction-reconciliation-gate.md  04-account-registration-on-first-iban.md  04-account-registration-via-config.md  05-fingerprint-based-dedup.md  06-kind-classification-manual-override.md  07-categories-seed-and-manual-assignment.md  08-async-llm-categorization.md  09-merchant-memory-and-audit-trail.md  10-reingest-statement-action.md  (+1 more)
docs/adr/: 0001-reconciliation-gate-is-mandatory-and-binary.md  0002-owner-is-a-label-not-a-person-entity.md  0003-merchant-memory-is-deterministic-not-adaptive.md  0004-pdfs-are-source-of-truth-transactions-are-read-only.md  0005-eu-sepa-only-is-load-bearing.md  0006-pdf-extraction-is-per-document-type.md
src/othermonet/: app.py  config.py  counterparty.py  db.py  extraction.py  extractor.py  fingerprint.py  inbox.py  kind.py  reconciliation.py  registrations.py  schema.py  seed.py  triodos.py  triodos_kontoauszug.py  triodos_kreditkarte.py
tests/: test_categories.py  test_dashboard_kind.py  test_dedup.py  test_extractor.py  test_fingerprint.py  test_inbox.py  test_kind.py  test_reconciliation.py  test_registrations.py  test_smoke.py  test_triodos.py  test_triodos_kontoauszug.py  test_triodos_kreditkarte.py
tests/fixtures/: __init__.py  extraction_result.json
(+4 files in other folders)
